Job Search implementation completed in worker ddashboard

--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -154,27 +154,7 @@
       <!-- Browse Jobs Section -->
       <div id="worker-browse-jobs-content" class="dashboard-section">
                 <h2 class="mb-4">Browse Available Jobs</h2>
-                <div class="row mb-3">
-                  <div class="col-md-4">
-                    <select class="form-select" id="categoryFilter">
-                      <option value="">All Categories</option>
-                      <option value="plumbing">Plumbing</option>
-                      <option value="electrical">Electrical</option>
-                      <option value="construction">Construction</option>
-                      <option value="carpentry">Carpentry</option>
-                      <option value="mechanical">Mechanical</option>
-                      <option value="painting">Painting</option>
-                    </select>
-                  </div>
-                  <div class="col-md-4">
-                    <select class="form-select" id="budgetFilter">
-                      <option value="">Any Budget</option>
-                      <option value="0-500">$0 - $500</option>
-                      <option value="500-1000">$500 - $1000</option>
-                      <option value="1000-2000">$1000 - $2000</option>
-                      <option value="2000+">$2000+</option>
-                    </select>
-                  </div>
+                <div class="rol mb-4">
                   <div class="col-md-4">
                     <input type="text" class="form-control" placeholder="Search jobs..." id="jobSearch">
                   </div>
