Load Application details in the table at worker dash controller

--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -194,50 +194,20 @@
                       <th>Budget</th>
                       <th>Applied Date</th>
                       <th>Status</th>
-                      <th>Actions</th>
+                    <!--  <th>Actions</th>-->
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                      <td>Kitchen Renovation</td>
-                      <td><span class="badge bg-primary">Plumbing</span></td>
-                      <td>$450</td>
-                      <td>2024-08-03</td>
-                      <td><span class="badge bg-warning">Under Review</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-outline-primary">View</button>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Bathroom Plumbing</td>
-                      <td><span class="badge bg-primary">Plumbing</span></td>
-                      <td>$320</td>
-                      <td>2024-08-01</td>
-                      <td><span class="badge bg-success">Accepted</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-outline-success">Start Work</button>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Garden Fence Repair</td>
-                      <td><span class="badge bg-success">Carpentry</span></td>
-                      <td>$280</td>
-                      <td>2024-07-30</td>
-                      <td><span class="badge bg-danger">Declined</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-outline-secondary" disabled>View</button>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Electrical Outlet Installation</td>
-                      <td><span class="badge bg-warning">Electrical</span></td>
-                      <td>$150</td>
-                      <td>2024-07-28</td>
-                      <td><span class="badge bg-info">Completed</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-outline-info">Review</button>
-                      </td>
-                    </tr>
+                    <tbody id="myApplicationTbody">
+<!--                    <tr>-->
+<!--                      <td>Kitchen Renovation</td>-->
+<!--                      <td><span class="badge bg-primary">Plumbing</span></td>-->
+<!--                      <td>$450</td>-->
+<!--                      <td>2024-08-03</td>-->
+<!--                      <td><span class="badge bg-warning">Under Review</span></td>-->
+<!--                      <td>-->
+<!--                        <button class="btn btn-sm btn-outline-primary">View</button>-->
+<!--                      </td>-->
+<!--                    </tr>-->
                     </tbody>
                   </table>
                 </div>
