Applications loading and Status Updating in Home Controller Done

--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -215,6 +215,7 @@
             <div class="row">
             </div>
         </section>
+
         <!-- Job Details Modal - Modern UI -->
         <div class="modal fade" id="jobModal" tabindex="-1" aria-labelledby="jobModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -313,69 +314,13 @@
             </div>
         </div>
 
-
-
         <!-- Applications Section -->
         <section id="homeowner-applications-content" class="dashboard-section">
             <h2 class="mb-4">Job Applications</h2>
-            <div class="application-card">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h5>Kitchen Plumbing Repair</h5>
-                        <hr>
-                        <div class="row"><div class="col-md-2">
-                            <strong>John Smith</strong>
-                            <p class="small text-muted" style="color: white !important;">Plumber • 5 years exp</p>
-                        </div>
-                            <div class="col-md-2">
-                                <button class="btn btn-success btn-sm mb-2 w-100">Accept</button>
-                                <button class="btn btn-outline-danger btn-sm w-100">Decline</button>
-                            </div>
-                        </div>
-                        <p class="mt-2">"I have extensive experience with kitchen plumbing repairs. I can fix your leaking pipes efficiently and provide warranty on my work."</p>
-                    </div>
-                </div>
+            <div id="applications-container" class="application-card">
+
             </div>
 
-            <div class="application-card">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h5>Electrical Wiring</h5>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-2">
-                                <strong>Mike Johnson</strong>
-                                <p class="small text-muted" style="color: white !important;">Electrician • 8 years exp</p>
-                            </div>
-                            <div class="col-md-2">
-                                <button class="btn btn-success btn-sm mb-2 w-100">Accept</button>
-                                <button class="btn btn-outline-danger btn-sm w-100">Decline</button>
-                            </div>
-                        </div>
-                        <p class="mt-2">"Licensed electrician with experience in residential wiring. I can install your outlets safely and up to code."</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="application-card">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h5>Fence Repair</h5>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-2">
-                                <strong>David Brown</strong>
-                                <p class="small text-muted" style="color: white !important;">Carpenter • 6 years exp</p>
-                            </div>
-                            <div class="col-md-2">
-                                <button class="btn btn-success btn-sm mb-2 w-100">Accept</button>
-                                <button class="btn btn-outline-danger btn-sm w-100">Decline</button>
-                            </div>
-                        </div>
-                        <p class="mt-2">"I specialize in fence repairs and installations. I can restore your wooden fence to excellent condition."</p>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <!-- Profile Section -->
