--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -46,10 +46,9 @@
         <li><a href="#admin-dashboard-content" data-target="add-job"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
         <li><a href="#admin-users-content"><i class="fas fa-user-circle"></i> Users</a></li>
         <li><a href="#admin-jobs-content" ><i class="fas fa-briefcase"></i> Jobs</a></li>
-<!--        <li><a href="#homeowner-post-job-content" data-section="homeowner-post-job-content" ><i class="fas fa-pen-square"></i> Post a Job</a></li>-->
-<!--        <li><a href="#homeowner-applications-content"><i class="fas fa-file-alt"></i> Applications</a></li>-->
     </ul>
 </div>
+
 <div class="demo-content">
             <!-- Main Content -->
             <div class="col-md-10 p-4">
@@ -164,22 +163,7 @@
                 <div id="admin-users-content" class="dashboard-section">
                     <h2 class="mb-4">User Management</h2>
                     <div class="row mb-3">
-                        <div class="col-md-4 mb-3">
-                            <select class="form-select" id="userTypeFilter">
-                                <option value="">All User Types</option>
-                                <option value="homeowner">Homeowners</option>
-                                <option value="worker">Workers</option>
-                                <option value="admin">Admins</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <select class="form-select" id="userStatusFilter">
-                                <option value="">All Status</option>
-                                <option value="active">Active</option>
-                                <option value="suspended">Suspended</option>
-                                <option value="pending">Pending Verification</option>
-                            </select>
-                        </div>
+
                         <div class="col-md-4">
                             <input type="text" class="form-control" placeholder="Search users..." id="userSearch">
                         </div>
@@ -193,10 +177,12 @@
                                 <th>Type</th>
                                 <th>Email</th>
                                 <th>Join Date</th>
-                                <th>Status</th>
                                 <th>Actions</th>
                             </tr>
                             </thead>
+                            <tbody id="userTableBody">
+
+                            </tbody>
 
                         </table>
                     </div>
