--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -185,6 +185,10 @@
                             </tbody>
 
                         </table>
+                        <div class="d-flex justify-content-center mt-3"  >
+                            <div id="paginationControls"></div>
+                        </div>
+
                     </div>
                 </div>
 
