Done Job Posts Searching in admin Controller

--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -186,7 +186,7 @@
 
                         </table>
                         <div class="d-flex justify-content-center mt-3"  >
-                            <div id="paginationControls"></div>
+                            <div id="paginationControls" class="paginationControls"></div>
                         </div>
 
                     </div>
@@ -218,7 +218,7 @@
 
                         </table>
                         <div class="d-flex justify-content-center mt-3">
-                            <div id="jobPaginationControls"></div>
+                            <div id="jobPaginationControls" class="paginationControls"></div>
                         </div>
                     </div>
                 </div>
