--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../Css/HomeOwnerDashBoard.css">
 
 </head>
@@ -354,6 +355,39 @@
                 </div>
             </div>
         </section>
+
+        <!-- Rating Modal -->
+        <div class="modal fade" id="ratingModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content" style="background:#0b0b3b; color:#fff;">
+                    <div class="modal-header border-0">
+                        <h5 class="modal-title fw-bold">Rate Worker</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="ratingWorkerName" class="fw-bold mb-2"></p>
+
+                        <div class="star-rating d-flex gap-1 mb-3">
+                            <i class="bi bi-star star" data-value="1"></i>
+                            <i class="bi bi-star star" data-value="2"></i>
+                            <i class="bi bi-star star" data-value="3"></i>
+                            <i class="bi bi-star star" data-value="4"></i>
+                            <i class="bi bi-star star" data-value="5"></i>
+                        </div>
+
+                        <textarea id="ratingComment" class="form-control form-control-sm rounded-3 shadow-sm border-0"
+                                  rows="3" placeholder="Write your feedback..."></textarea>
+                    </div>
+                    <div class="modal-footer border-0">
+                        <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" id="submitRating" class="btn btn-gradient"    data-jobid="${app.id}"
+                                data-workerid="${app.workerId}"
+                                data-workername="${app.workerName}">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </div>
