--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -380,8 +380,9 @@
                     </div>
                     <div class="modal-footer border-0">
                         <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" id="submitRating" class="btn btn-gradient"    data-jobid="${app.id}"
-                                data-workerid="${app.workerId}"
+                        <button type="button" id="submitRating" class="btn btn-gradient"
+                                data-jobid="${app.jobPostsId}"
+                        data-workerid="${app.workerId}"
                                 data-workername="${app.workerName}">Submit</button>
                     </div>
                 </div>
