--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -100,8 +100,8 @@
                         <div class="card-header">
                             <h5>Recent Jobs</h5>
                         </div>
-                        <div class="card-body">
-                            <div class="job-card card mb-2">
+                        <div class="card-body" id="recent-jobs-container">
+                           <!-- <div class="job-card card mb-2">
                                 <div class="card-body">
                                     <h6>Kitchen Plumbing Repair</h6>
                                     <p class="small text-muted" style="color: white !important;">Posted 2 days ago</p>
@@ -114,7 +114,7 @@
                                     <p class="small text-muted" style="color: white !important;">Posted 1 week ago</p>
                                     <span class="badge bg-warning status-badge">In Progress</span>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -395,6 +395,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
 
 </body>
